--- a/src/main/resources/templates/oauth-options.html
+++ b/src/main/resources/templates/oauth-options.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OAuth Options</title>
+    <title>Login com Google</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-<h1>Login com Google</h1>
-<a th:href="'https://accounts.google.com/o/oauth2/v2/auth?redirect_uri=' + ${redirect_uri} + '&response_type=code&client_id=' + ${client_id} + '&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.profile+openid&access_type=offline'">
-    Sign in with Google
-</a>
+<body class="bg-light">
+    <div class="container d-flex justify-content-center align-items-center vh-100">
+        <div class="card p-4 shadow" style="max-width: 400px; width: 100%;">
+            <div class="card-body text-center">
+                <h1 class="h4 mb-4">Login Social</h1>
+                <a th:href="'https://accounts.google.com/o/oauth2/v2/auth?redirect_uri=' + ${redirect_uri} + '&response_type=code&client_id=' + ${client_id} + '&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.profile+openid&access_type=offline'"
+                   class="btn btn-danger btn-block">
+                    <i class="fab fa-google"></i> Sign in with Google
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </body>
 </html>
