--- a/src/main/resources/static/css/create-games.css
+++ b/src/main/resources/static/css/create-games.css
@@ -1,6 +1,13 @@
+body {
+    background-color: black;
+}
 .custom-container {
     width: 70%;
     margin: 2rem auto;
+    background-color: white;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
 }
 .genre-input {
     color: black;
